think i finished all the endpoints but i haven't tried anything out yet.
